--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter:
     sdk: flutter
   search_widget: 1.0.2
+  pull_to_reveal: 0.0.1
 
 
   # The following adds the Cupertino Icons font to your application.
